logging/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kibana
  template:
    metadata:
      labels:
        name: kibana
    spec:
      containers:
      - name: kibana
        image: bitnami/kibana:5.6.14-r12
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        resources:
          requests:
            cpu: 10m
