logging/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
spec:
  ports:
  - name: ui
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    name: kibana
  type: ClusterIP
